change title and crop photos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/Laura_Loves_Plants_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laura Loves Plants</title>
+    <title>Laura Loves Hoyas</title>
   </head>
   <body>
     <div class="container">
